Date	Added

2007/01/28
	* Fixed the description of @summon
	* Fixed @nuke's position (I edited the wrong file by accident)
2007/01/27
	* Atcommand fixup [ultramage]
	- removed atcommands @w, @server_date/time, @red, @happyhappyjoyjoy, @shuffle
	- synced gm level of @jailfor, @charjailtime, @npcmove, @chardropall,
	  @charstoreall, @send, @mute, @changelook, @exp and @nuke
	- added conf entries for @whozeny, @kamic, @tonpc, @petid, @identify, @adopt,
	  @trade, @changelook, @send
	- reorganized the atcommands a bit
2007/01/26
	* Added battle config hom_rename (homunc.txt) to enable renaming the
	  homunculus multiple times. Defaults to no.
2007/01/22
	* Moved the homunculus setting from pet.conf to homunc.conf [Skotlex]
2007/01/12
	* Updated the information about ip rules and DDoS protection in 
	  packet_athena.conf and commented out the line "allow: all" so 
	  connections are rejected when a DDoS is detected. [FlavioJS]
2007/01/08
	* Added the console plugin to plugin_athena.conf commented out. [FlavioJS]
2007/01/05
	* Updated noicewall mapflags (to allow them in cities), thanks to Au{R}oN
2007/01/03
	* Changed friend_auto_add to 'yes' (closer to official, except for one detail)
	* Changed monster_class_change_full_recover to 'yes' (official) [ultramage]
2006/12/20
	* Fixed the meaning of stdout_with_ansisequence and changed the default 
	  value to no. [FlavioJS]
2006/12/18
	* Added hom_setting to specify which homunculus 'quirks' are in effect. The
	  default activates all of them, if you set them to 0 then homuncs will not
	  be treated in any special matter, pretty much like standard mobs. if I
	  missed any 'quirky' homunc behaviour from it, report it so it can be added
	  to the list (This setting was added to pet.conf).
	* flooritem_lifetime now accepts a much higher max value (previously it was
	  65k when the default was 60k)
	* Removed monster_ai 0x80 since it's now handled by hom_setting.
2006/12/12